--- a/haskell/geometry/geometry.cabal
+++ b/haskell/geometry/geometry.cabal
@@ -18,3 +18,4 @@ executable geometry
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                       extra >= 1.7.1
