--- a/haskell/geometry/geometry.cabal
+++ b/haskell/geometry/geometry.cabal
@@ -50,7 +50,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   -- Modules exported by the library.
-  exposed-modules:     Line, Decorations, Geometry, Angle, Circle, Polygon, SVG, Figures, Base,  Point
+  exposed-modules:     Line, Decorations, Geometry, Angle, Circle, Polygon, SVG, Figures, Base,  Point, Intersections
 
   -- Modules included in this library but not exported.
   -- other-modules:
