--- a/haskell/geometry/geometry.cabal
+++ b/haskell/geometry/geometry.cabal
@@ -50,7 +50,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   -- Modules exported by the library.
-  exposed-modules:     Line, Decorations, Geometry, Angle, Circle, Polygon, SVG, Figures, Base,  Point, Intersections
+  exposed-modules:  Geometry, Geometry.Line, Geometry.Decorations,  Geometry.Angle, Geometry.Circle, Geometry.Polygon, Geometry.SVG, Geometry.Figures, Geometry.Base,  Geometry.Point, Geometry.Intersections
 
   -- Modules included in this library but not exported.
   -- other-modules:
