--- a/haskell/geometry/geometry.cabal
+++ b/haskell/geometry/geometry.cabal
@@ -77,7 +77,14 @@ library
                    , StandaloneDeriving
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.12 && <4.13, text >=1.2 && <1.3, hspec >=2.7 && <2.8, QuickCheck >=2.14 && <2.15, test-invariant >=0.4 && <0.5, extra >=1.7 && <1.8, svg-builder >=0.1 && <0.2, double-conversion >=2.0 && <2.1, ieee754 >=0.8 && <0.9, test-invariant >=0.4.5.0, hspec >=2.7.1
+  build-depends: base >=4.12
+               , text >=1.2
+               , hspec >=2.7
+               , QuickCheck >=2.13
+               , extra >=1.7
+               , svg-builder >=0.1
+               , double-conversion >=2.0
+               , ieee754 >=0.8
 
   -- Directories containing source files.
   -- hs-source-dirs:
