--- a/geometry.cabal
+++ b/geometry.cabal
@@ -51,6 +51,7 @@ extra-source-files:  CHANGELOG.md
 library
   -- Modules exported by the library.
   exposed-modules:  Geometry
+                  , Geometry.Testing
 
   -- Modules included in this library but not exported.
   other-modules: Geometry.Line
@@ -64,7 +65,7 @@ library
                , Geometry.Base
                , Geometry.Point
                , Geometry.Intersections
-
+               
   -- LANGUAGE extensions used by modules in this package.
   other-extensions:  FlexibleInstances
                    , FlexibleContexts
@@ -92,3 +93,29 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
+test-suite theorems
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs:
+      test/theorems
+  build-depends:
+                base
+              , hspec
+              , QuickCheck
+              , geometry
+  other-modules:
+                TrianglesSpec
+
+test-suite unit-testing
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs:
+      test/unit-testing
+  build-depends:
+                base
+              , hspec
+              , test-invariant
+              , QuickCheck
+              , geometry
+  other-modules:
+                PointSpec
