Tests and covering

--- a/geometry.cabal
+++ b/geometry.cabal
@@ -52,7 +52,8 @@ library
   -- Modules exported by the library.
   exposed-modules:  Geometry
                   , Geometry.Testing
-
+                  , Geometry.DocFigs
+                  
   -- Modules included in this library but not exported.
   other-modules: Geometry.Line
                , Geometry.Decorations
@@ -105,6 +106,7 @@ test-suite theorems
               , geometry
   other-modules:
                 TrianglesSpec
+  default-language:    Haskell2010
 
 test-suite unit-testing
   type: exitcode-stdio-1.0
@@ -118,4 +120,32 @@ test-suite unit-testing
               , QuickCheck
               , geometry
   other-modules:
-                PointSpec
+                BaseSpec
+              , PointSpec
+              , LineSpec
+              , CircleSpec
+              , AngleSpec
+  default-language:    Haskell2010
+
+  
+ test-suite figures
+   type: exitcode-stdio-1.0
+   main-is: Main.hs
+   build-depends:
+                 base
+               , geometry
+   other-modules:
+                 Geometry.Line
+               , Geometry.Decorations
+               , Geometry.Angle
+               , Geometry.Circle
+               , Geometry.Polygon
+               , Geometry.Plot
+               , Geometry.SVG
+               , Geometry.Figures
+               , Geometry.Base
+               , Geometry.Point
+               , Geometry.Intersections
+  default-language:    Haskell2010
+              
+                
