--- a/geometry.cabal
+++ b/geometry.cabal
@@ -87,6 +87,7 @@ library
                , svg-builder >=0.1
                , double-conversion >=2.0
                , ieee754 >=0.8
+               , transformers >= 0.5
 
   -- Directories containing source files.
   -- hs-source-dirs:
