--- a/geometry.cabal
+++ b/geometry.cabal
@@ -90,6 +90,7 @@ library
                , ieee754 >=0.8
                , math-functions >=0.3
                , transformers >= 0.5
+               , directory >=1.3
 
   -- Directories containing source files.
   -- hs-source-dirs:
