--- a/geometry.cabal
+++ b/geometry.cabal
@@ -89,7 +89,7 @@ library
                , double-conversion >=2.0
                , ieee754 >=0.8
                , math-functions >=0.3
-               , transformers >= 0.5
+               --, transformers >= 0.5
                , directory >=1.3
 
   -- Directories containing source files.
